# celpc

./: .gitignore  Cargo.toml  README.md
benches/: celpc.rs
script/: params.py
src/: ajtai.rs  commit.rs  encoder.rs  entities.rs  lib.rs  main.rs  matrix.rs  params.rs  polynomial_commitment.rs  prover.rs  r1cs.rs  utils.rs  verifier.rs
src/ajtai/: commiter.rs  entities.rs  mod.rs
src/csprng/: cdt.rs  convolve.rs  cosac.rs  karney.rs  mod.rs  oracle.rs  uniform.rs
src/parameters/: mod.rs  params.rs  params_list.rs
src/ring/: mod.rs  poly.rs  ring.rs
