[package]
name = "celpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe-ntt = "0.5.0"
rug = "1.22.0"
rand = "0.8.5"
sha3 = "0.10"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "celpc"
harness = false
